[package]
name = "rustic_fish"
version = "0.1.0"
authors = ["Tim Vrakas <timv@stanford.edu>"]
keywords = ["arm", "cortex-m"]
categories = ["embedded", "no-std"]
edition = "2018"
repository = "https://github.com/stanford-ssi/RusticFish"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
panic-halt = "~0.2"
panic-semihosting = "~0.5"
cortex-m-semihosting = "~0.3"
feather_m4 = "0.5.0"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "~0.9"
default-features = false

[features]
# ask the HAL to enable atsamd51j19a support
default = ["rt", "atsamd-hal/samd51j19a", "atsamd-hal/samd51"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j19a-rt"]
unproven = ["atsamd-hal/unproven"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"